--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
+  <body class="body">
+    <!--HEADER-->
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo"
+          >Web<span class="accent">Studio</span></a
+        >
+        <ul class="navigation-list">
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contacts">Contacts</a></li>
@@ -18,92 +28,102 @@
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="email"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
+    <!--MAIN-->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="dark-bg">
+        <h1 class="main-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="main-button">Order Service</button>
       </section>
       <section>
         <h2 hidden>advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="main-strategy">Strategy</h3>
+            <p class="main-strategy-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="main-punctuality">Punctuality</h3>
+            <p class="main-punctuality-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="main-diligence">Diligence</h3>
+            <p class="main-diligence-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="main-technologies">Technologies</h3>
+            <p class="main-technologies-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
+      <section class="main-page">
+        <h2 class="main-page-text">What are we doing</h2>
         <ul>
-          <li>
+          <li class="main-page-img">
             <img src="./images/images/img1.jpg" alt="img1" width="360" />
           </li>
-          <li>
+          <li class="main-page-img">
             <img src="./images/images/img2.jpg" alt="img2" width="360" />
           </li>
-          <li>
+          <li class="main-page-img">
             <img src="./images/images/img3.jpg" alt="img3" width="360" />
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="Light-bg">
+        <h2 class="Light-bg-text">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-card">
             <img src="./images/images/img4.jpg" alt="img4" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-card-text1">Mark Guerrero</h3>
+            <p class="team-card-text2">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/images/img5.jpg" alt="img5" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-card-text1">Tom Ford</h3>
+            <p class="team-card-text2">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/images/img6.jpg" alt="img6" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-card-text1">Camila Garcia</h3>
+            <p class="team-card-text2">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/images/img7.jpg" alt="img7" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-card-text1">Daniel Wilson</h3>
+            <p class="team-card-text2">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <!--FOOTER-->
+    <footer class="footer-dark-bg">
+      <a href="./index.html" class="logo-web"
+        >WEB<span class="logo-studio">STUDIO</span></a
+      >
+      <p class="footer-dark-bg-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
