--- a/portfolio.html
+++ b/portfolio.html
@@ -2,16 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  <body class="body-portfolio">
+    <!--HEADER-->
     <header class="header">
       <nav>
         <a href="./index.html" class="logo"
-          >Web<span class="accent">Studio</span></a
+          >WEB<span class="accent">STUDIO</span></a
         >
         <ul class="navigation-list">
           <li><a href="#studio">Studio</a></li>
@@ -32,84 +38,74 @@
         </ul>
       </address>
     </header>
+    <!--MAIN-->
     <main>
-      <section class="dark-bg">
-        <h1 class="main-text">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button">Order Service</button>
+      <section>
+        <button>All</button>
+        <button>Web Site</button>
+        <button>App</button>
+        <button>Design</button>
+        <button>Marketing</button>
       </section>
       <section>
-        <h2 hidden>advantages</h2>
         <ul>
+          <li class="project-card">
+            <img src="./images/images/img8.jpg" alt="img8" width="360"/>
+            <h3 class="project-card-text1">Banking App Interface Concept</h3>
+            <p class="project-card-text2">App</p>
+          </li class="project-card">
           <li>
-            <h3 class="main-strategy">Strategy</h3>
-            <p class="main-strategy-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
+            <img src="./images/images/img9.jpg" alt="img9" width="360"/>
+            <h3 class="project-card-text1">Cashless Payment</h3>
+            <p class="project-card-text2">Marketing</p>
           </li>
-          <li>
-            <h3 class="main-punctuality">Punctuality</h3>
-            <p class="main-punctuality-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-diligence">Diligence</h3>
-            <p class="main-diligence-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-technologies">Technologies</h3>
-            <p class="main-technologies-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
+          <li class="project-card">
+            <img src="./images/images/img10.jpg" alt="img10" width="360"/>
+            <h3 class="project-card-text1">Meditation App</h3>
+            <p class="project-card-text2">App</p>
           </li>
         </ul>
       </section>
-      <section class="main-page">
-        <h2 class="main-page-text">What are we doing</h2>
+      <section>
         <ul>
-          <li class="main-page-img">
-            <img src="./images/images/img1.jpg" alt="img1" width="360" />
+          <li class="project-card">
+            <img src="./images/images/img11.jpg" alt="img11" width="360"/>
+            <h3 class="project-card-text1">Taxi Service</h3>
+            <p class="project-card-text2">Marketing</p>
           </li>
-          <li class="main-page-img">
-            <img src="./images/images/img2.jpg" alt="img2" width="360" />
+          <li class="project-card">
+            <img src="./images/images/img12.jpg" alt="img12" width="360"/>
+            <h3 class="project-card-text1">Screen Illustrations</h3>
+            <p class="project-card-text2">Design</p>
           </li>
-          <li class="main-page-img">
-            <img src="./images/images/img3.jpg" alt="img3" width="360" />
+          <li class="project-card">
+            <img src="./images/images/img13.jpg" alt="img13" width="360"/>
+            <h3 class="project-card-text1">Online Courses</h3>
+            <p class="project-card-text2">Marketing</p>
           </li>
         </ul>
       </section>
-      <section class="Light-bg">
-        <h2 class="Light-bg-text">Our Team</h2>
+      <section>
         <ul>
-          <li class="team-card">
-            <img src="./images/images/img4.jpg" alt="img4" width="264" />
-            <h3 class="team-card-text1">Mark Guerrero</h3>
-            <p class="team-card-text2">Product Designer</p>
+          <li class="project-card">
+            <img src="./images/images/img14.jpg" alt="img14" width="360"/>
+            <h3 class="project-card-text1">Instagram Stories Concept</h3>
+            <p class="project-card-text2">Design</p>
           </li>
-          <li class="team-card">
-            <img src="./images/images/img5.jpg" alt="img5" width="264" />
-            <h3 class="team-card-text1">Tom Ford</h3>
-            <p class="team-card-text2">Frontend Developer</p>
+          <li class="project-card">
+            <img src="./images/images/img15.jpg" alt="img15" width="360"/>
+            <h3 class="project-card-text1">Organic Food</h3>
+            <p class="project-card-text2">Web Site</p>
           </li>
-          <li class="team-card">
-            <img src="./images/images/img6.jpg" alt="img6" width="264" />
-            <h3 class="team-card-text1">Camila Garcia</h3>
-            <p class="team-card-text2">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/images/img7.jpg" alt="img7" width="264" />
-            <h3 class="team-card-text1">Daniel Wilson</h3>
-            <p class="team-card-text2">UI Designer</p>
+          <li class="project-card">
+            <img src="./images/images/img16.jpg" alt="img16" width="360"/>
+            <h3 class="project-card-text1">Fresh Coffee</h3>
+            <p class="project-card-text2">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
+    <!--FOOTER-->
     <footer class="footer-dark-bg">
       <a href="./index.html" class="logo-web"
         >WEB<span class="logo-studio">STUDIO</span></a
