Видалила зайві стилі

--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
           </li>
         </ul>
       </section>
-      <section class="main-page">
+      <section>
         <h2 class="main-page-text">What are we doing</h2>
         <ul>
-          <li class="main-page-img">
+          <li>
             <img src="./images/images/img1.jpg" alt="img1" width="360" />
           </li>
-          <li class="main-page-img">
+          <li>
             <img src="./images/images/img2.jpg" alt="img2" width="360" />
           </li>
-          <li class="main-page-img">
+          <li>
             <img src="./images/images/img3.jpg" alt="img3" width="360" />
           </li>
         </ul>
