--- a/index.html
+++ b/index.html
@@ -16,24 +16,33 @@
   <body class="body">
     <!--HEADER-->
     <header class="header">
-      <nav>
-        <a href="./index.html" class="logo"
+      <!--Навігація-->
+      <nav class="list">
+        <a class="link" href="./index.html" class="logo"
           >Web<span class="accent">Studio</span></a
         >
-        <ul class="navigation-list">
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+        <!--Невпорядкований список-->
+        <ul>
+          <li class="navigation-list" class="link">
+            <a href="./index.html" href="#studio">Studio</a>
+          </li>
+          <li class="navigation-list" class="link">
+            <a href="./portfolio.html" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="navigation-list" class="link">
+            <a href="" href="#contacts">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
+      <!--Конт. Інформація-->
+      <address class="header-address">
+        <ul class="list">
+          <li class="link">
             <a href="mailto:info@devstudio.com" class="email"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -41,44 +50,47 @@
     </header>
     <!--MAIN-->
     <main>
+      <!--Перша секція основного контенту-->
       <section class="dark-bg">
         <h1 class="main-text">Effective Solutions for Your Business</h1>
         <button type="button" class="main-button">Order Service</button>
       </section>
-      <section>
+      <!--Друга секція основного контенту-->
+      <section class="list">
         <h2 hidden>advantages</h2>
         <ul>
           <li>
-            <h3 class="main-strategy">Strategy</h3>
-            <p class="main-strategy-text">
+            <h3 class="main-second-section">Strategy</h3>
+            <p class="main-second-section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="main-punctuality">Punctuality</h3>
-            <p class="main-punctuality-text">
+            <h3 class="main-second-section">Punctuality</h3>
+            <p class="main-second-section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="main-diligence">Diligence</h3>
-            <p class="main-diligence-text">
+            <h3 class="main-second-section">Diligence</h3>
+            <p class="main-second-section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="main-technologies">Technologies</h3>
-            <p class="main-technologies-text">
+            <h3 class="main-second-section">Technologies</h3>
+            <p class="main-second-section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
+      <!--Третя секція основного контенту-->
+      <section class="list">
         <h2 class="main-page-text">What are we doing</h2>
         <ul>
           <li>
@@ -92,36 +104,38 @@
           </li>
         </ul>
       </section>
-      <section class="Light-bg">
-        <h2 class="Light-bg-text">Our Team</h2>
-        <ul>
-          <li class="team-card">
+      <!--Четверта секція основного контенту-->
+      <section class="light-bg">
+        <h2 class="main-page-text">Our Team</h2>
+        <ul class="list">
+          <li class="fourth-section">
             <img src="./images/images/img4.jpg" alt="img4" width="264" />
-            <h3 class="team-card-text1">Mark Guerrero</h3>
-            <p class="team-card-text2">Product Designer</p>
+            <h3 class="main-fourth-section">Mark Guerrero</h3>
+            <p class="main-fourth-section-text">Product Designer</p>
           </li>
-          <li class="team-card">
+          <li class="fourth-section">
             <img src="./images/images/img5.jpg" alt="img5" width="264" />
-            <h3 class="team-card-text1">Tom Ford</h3>
-            <p class="team-card-text2">Frontend Developer</p>
+            <h3 class="main-fourth-section">Tom Ford</h3>
+            <p class="main-fourth-section-text">Frontend Developer</p>
           </li>
-          <li class="team-card">
+          <li class="fourth-section">
             <img src="./images/images/img6.jpg" alt="img6" width="264" />
-            <h3 class="team-card-text1">Camila Garcia</h3>
-            <p class="team-card-text2">Marketing</p>
+            <h3 class="main-fourth-section">Camila Garcia</h3>
+            <p class="main-fourth-section-text">Marketing</p>
           </li>
-          <li class="team-card">
+          <li class="fourth-section">
             <img src="./images/images/img7.jpg" alt="img7" width="264" />
-            <h3 class="team-card-text1">Daniel Wilson</h3>
-            <p class="team-card-text2">UI Designer</p>
+            <h3 class="main-fourth-section">Daniel Wilson</h3>
+            <p class="main-fourth-section-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--FOOTER-->
+    <!--Підвал сторінки-->
     <footer class="footer-dark-bg">
-      <a href="./index.html" class="logo-web"
-        >WEB<span class="logo-studio">STUDIO</span></a
+      <a href="./index.html" class="link" class="logo-web"
+        >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
         Increase the flow of customers and sales for your business with digital
