Fixed errors and added certain attributes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--Навігація-->
       <nav class="list">
         <a class="link" href="./index.html" class="logo"
-          >Web<span class="accent">Studio</span></a
+          >WEB<span class="accent">Studio</span></a
         >
         <!--Невпорядкований список-->
         <ul>
