--- a/portfolio.html
+++ b/portfolio.html
@@ -15,20 +15,20 @@
   <body class="body-portfolio">
     <!--HEADER-->
     <header class="header">
-      <nav>
-        <a href="./index.html" class="logo"
-          >WEB<span class="accent">STUDIO</span></a
+      <nav class="list">
+        <a href="./index.html" class="link" class="logo"
+          >WEB<span class="accent">Studio</span></a
         >
         <ul class="navigation-list">
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li class="first-item-header"><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="header-address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="email"
+            <a href="mailto:info@devstudio.com" class="link" class="email"
               >info@devstudio.com</a
             >
           </li>
@@ -41,74 +41,78 @@
     <!--MAIN-->
     <main>
       <section>
-        <button>All</button>
-        <button>Web Site</button>
-        <button>App</button>
-        <button>Design</button>
-        <button>Marketing</button>
-      </section>
-      <section>
-        <ul>
-          <li class="project-card">
+        <h1>Portfolio</h1>
+        <!--Перший список-->
+        <ul class="list">
+            <li><button type="button" class="main-button-portfolio">All</button></li>
+            <li><button type="button" class="main-button-portfolio">Web Site</button></li>
+            <li><button type="button" class="main-button-portfolio">App</button></li>
+            <li><button type="button" class="main-button-portfolio">Design</button></li>
+            <li><button type="button" class="main-button-portfolio">Marketing</button></li>
+        </ul>
+        <!--Другий список-->
+        <ul class="list">
+            <!--Перший пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img8.jpg" alt="img8" width="360"/>
-            <h3 class="project-card-text1">Banking App Interface Concept</h3>
-            <p class="project-card-text2">App</p>
-          </li class="project-card">
-          <li>
+            <h2 class="project-text">Banking App Interface Concept</h2>
+            <p class="project-card-text">App</p>
+          </li">
+          <!--Другий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img9.jpg" alt="img9" width="360"/>
-            <h3 class="project-card-text1">Cashless Payment</h3>
-            <p class="project-card-text2">Marketing</p>
+            <h2 class="project-text">Cashless Payment</h2>
+            <p class="project-card-text">Marketing</p>
           </li>
-          <li class="project-card">
+          <!--Третій пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img10.jpg" alt="img10" width="360"/>
-            <h3 class="project-card-text1">Meditation App</h3>
-            <p class="project-card-text2">App</p>
+            <h2 class="project-text">Meditation App</h2>
+            <p class="project-card-text">App</p>
           </li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li class="project-card">
+          <!--Четвертий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img11.jpg" alt="img11" width="360"/>
-            <h3 class="project-card-text1">Taxi Service</h3>
-            <p class="project-card-text2">Marketing</p>
+            <h2 class="project-text">Taxi Service</h2>
+            <p class="project-card-text">Marketing</p>
           </li>
-          <li class="project-card">
+          <!--П'ятий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img12.jpg" alt="img12" width="360"/>
-            <h3 class="project-card-text1">Screen Illustrations</h3>
-            <p class="project-card-text2">Design</p>
+            <h2 class="project-text">Screen Illustrations</h2>
+            <p class="project-card-text">Design</p>
           </li>
-          <li class="project-card">
+          <!--Шостий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img13.jpg" alt="img13" width="360"/>
-            <h3 class="project-card-text1">Online Courses</h3>
-            <p class="project-card-text2">Marketing</p>
+            <h2 class="project-text">Online Courses</h2>
+            <p class="project-card-text">Marketing</p>
           </li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li class="project-card">
+          <!--Сьомий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img14.jpg" alt="img14" width="360"/>
-            <h3 class="project-card-text1">Instagram Stories Concept</h3>
-            <p class="project-card-text2">Design</p>
+            <h2 class="project-text">Instagram Stories Concept</h2>
+            <p class="project-card-text">Design</p>
           </li>
-          <li class="project-card">
+          <!--Восьмий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img15.jpg" alt="img15" width="360"/>
-            <h3 class="project-card-text1">Organic Food</h3>
-            <p class="project-card-text2">Web Site</p>
+            <h2 class="project-text">Organic Food</h2>
+            <p class="project-card-text">Web Site</p>
           </li>
-          <li class="project-card">
+          <!--Дев'ятий пункт-->
+          <li class="project-card" class="link">
             <img src="./images/images/img16.jpg" alt="img16" width="360"/>
-            <h3 class="project-card-text1">Fresh Coffee</h3>
-            <p class="project-card-text2">Web Site</p>
+            <h2 class="project-text">Fresh Coffee</h2>
+            <p class="project-card-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!--FOOTER-->
     <footer class="footer-dark-bg">
-      <a href="./index.html" class="logo-web"
-        >WEB<span class="logo-studio">STUDIO</span></a
+      <a href="./index.html" class="link" class="logo-web"
+        >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
         Increase the flow of customers and sales for your business with digital
