--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
     <!--HEADER-->
     <header class="header">
       <!--Навігація-->
-      <nav class="list">
+      <nav>
         <a class="link" href="./index.html" class="logo"
           >WEB<span class="accent">Studio</span></a
         >
         <!--Невпорядкований список-->
-        <ul>
-          <li class="navigation-list" class="link">
-            <a href="./index.html" href="#studio">Studio</a>
+        <ul class="list">
+          <li class="navigation" class="link">
+            <a href="./index.html">Studio</a>
           </li>
-          <li class="navigation-list" class="link">
-            <a href="./portfolio.html" href="#portfolio">Portfolio</a>
+          <li class="navigation" class="link">
+            <a href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="navigation-list" class="link">
-            <a href="" href="#contacts">Contacts</a>
+          <li class="navigation" class="link">
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!--Конт. Інформація-->
       <address class="header-address">
         <ul class="list">
-          <li class="link">
-            <a href="mailto:info@devstudio.com" class="email"
+          <li>
+            <a href="mailto:info@devstudio.com" class="link" class="email"
               >info@devstudio.com</a
             >
           </li>
@@ -56,9 +56,9 @@
         <button type="button" class="main-button">Order Service</button>
       </section>
       <!--Друга секція основного контенту-->
-      <section class="list">
+      <section>
         <h2 hidden>advantages</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="main-second-section">Strategy</h3>
             <p class="main-second-section-text">
@@ -90,9 +90,9 @@
         </ul>
       </section>
       <!--Третя секція основного контенту-->
-      <section class="list">
+      <section>
         <h2 class="main-page-text">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/images/img1.jpg" alt="img1" width="360" />
           </li>
