--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,25 @@
   <body class="body-portfolio">
     <!--HEADER-->
     <header class="header">
-      <nav class="list">
+      <nav>
         <a href="./index.html" class="link" class="logo"
           >WEB<span class="accent">Studio</span></a
         >
-        <ul class="navigation-list">
+        <ul class="list">
           <li class="first-item-header"><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="first-item-header"><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li class="first-item-header"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link" class="email"
+            <a href="mailto:info@devstudio.com" class="link" class="email-portfolio"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link" class="phone-portfolio">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -44,11 +44,11 @@
         <h1>Portfolio</h1>
         <!--Перший список-->
         <ul class="list">
-            <li><button type="button" class="main-button-portfolio">All</button></li>
-            <li><button type="button" class="main-button-portfolio">Web Site</button></li>
-            <li><button type="button" class="main-button-portfolio">App</button></li>
-            <li><button type="button" class="main-button-portfolio">Design</button></li>
-            <li><button type="button" class="main-button-portfolio">Marketing</button></li>
+            <li class="main-button-portfolio"><button type="button">All</button></li>
+            <li class="main-button-portfolio"><button type="button">Web Site</button></li>
+            <li class="main-button-portfolio"><button type="button">App</button></li>
+            <li class="main-button-portfolio"><button type="button">Design</button></li>
+            <li class="main-button-portfolio"><button type="button">Marketing</button></li>
         </ul>
         <!--Другий список-->
         <ul class="list">
