--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer-dark-bg">
-      <a href="./index.html" class="link" class="logo-web"
+      <a class="logo-web" href="./index.html" class="link"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
