--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
         >
         <!--Невпорядкований список-->
         <ul class="list">
-          <li class="navigation" class="link">
-            <a href="./index.html">Studio</a>
+          <li>
+            <a href="./index.html" class="guidance" class="link">Studio</a>
           </li>
-          <li class="navigation" class="link">
-            <a href="./portfolio.html">Portfolio</a>
+          <li>
+            <a href="./portfolio.html" class="guidance" class="link"
+              >Portfolio</a
+            >
           </li>
-          <li class="navigation" class="link">
-            <a href="">Contacts</a>
+          <li>
+            <a href="" class="guidance" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -38,12 +40,14 @@
       <address class="header-address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link" class="email"
+            <a href="mailto:info@devstudio.com" class="email" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="link">
-            <a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a>
+          <li>
+            <a href="tel:+110001111111" class="phone" class="link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -134,7 +138,7 @@
     <!--FOOTER-->
     <!--Підвал сторінки-->
     <footer class="footer-dark-bg">
-      <a href="./index.html" class="link" class="logo-web"
+      <a class="logo-web" href="./index.html" class="link"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
