tried to fix the mistakes

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!--HEADER-->
     <header class="header">
       <nav>
-        <a href="./index.html" class="link" class="logo"
+        <a class="logo" class="link" href="./index.html"
           >WEB<span class="accent">Studio</span></a
         >
         <ul class="list">
@@ -28,12 +28,12 @@
       <address class="header-address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link" class="email-portfolio"
+            <a class="link" class="email-portfolio" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link" class="phone-portfolio">+11 (000) 111-11-11</a>
+            <a class="link" class="phone-portfolio" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -41,8 +41,9 @@
     <!--MAIN-->
     <main>
       <section>
+        <!--Перший елемент секції в MAIN-->
         <h1>Portfolio</h1>
-        <!--Перший список-->
+        <!--Перший список (Другий елемент)-->
         <ul class="list">
             <li class="main-button-portfolio"><button type="button">All</button></li>
             <li class="main-button-portfolio"><button type="button">Web Site</button></li>
@@ -50,59 +51,59 @@
             <li class="main-button-portfolio"><button type="button">Design</button></li>
             <li class="main-button-portfolio"><button type="button">Marketing</button></li>
         </ul>
-        <!--Другий список-->
+        <!--Другий список (Третій елемент)-->
         <ul class="list">
-            <!--Перший пункт-->
+            <!--Перший пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img8.jpg" alt="img8" width="360"/>
+            <img src="./images/images/img8.jpg" alt="screenshots of the banking application" width="360"/>
             <h2 class="project-text">Banking App Interface Concept</h2>
             <p class="project-card-text">App</p>
           </li">
-          <!--Другий пункт-->
+          <!--Другий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img9.jpg" alt="img9" width="360"/>
+            <img src="./images/images/img9.jpg" alt="Cashless Payment" width="360"/>
             <h2 class="project-text">Cashless Payment</h2>
             <p class="project-card-text">Marketing</p>
           </li>
-          <!--Третій пункт-->
+          <!--Третій пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img10.jpg" alt="img10" width="360"/>
+            <img src="./images/images/img10.jpg" alt="Meditation App" width="360"/>
             <h2 class="project-text">Meditation App</h2>
             <p class="project-card-text">App</p>
           </li>
-          <!--Четвертий пункт-->
+          <!--Четвертий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img11.jpg" alt="img11" width="360"/>
+            <img src="./images/images/img11.jpg" alt="Taxi Service" width="360"/>
             <h2 class="project-text">Taxi Service</h2>
             <p class="project-card-text">Marketing</p>
           </li>
-          <!--П'ятий пункт-->
+          <!--П'ятий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img12.jpg" alt="img12" width="360"/>
+            <img src="./images/images/img12.jpg" alt="Screen Illustrations" width="360"/>
             <h2 class="project-text">Screen Illustrations</h2>
             <p class="project-card-text">Design</p>
           </li>
-          <!--Шостий пункт-->
+          <!--Шостий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img13.jpg" alt="img13" width="360"/>
+            <img src="./images/images/img13.jpg" alt="Online Courses" width="360"/>
             <h2 class="project-text">Online Courses</h2>
             <p class="project-card-text">Marketing</p>
           </li>
-          <!--Сьомий пункт-->
+          <!--Сьомий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img14.jpg" alt="img14" width="360"/>
+            <img src="./images/images/img14.jpg" alt="Instagram Stories Concept" width="360"/>
             <h2 class="project-text">Instagram Stories Concept</h2>
             <p class="project-card-text">Design</p>
           </li>
-          <!--Восьмий пункт-->
+          <!--Восьмий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img15.jpg" alt="img15" width="360"/>
+            <img src="./images/images/img15.jpg" alt="Organic Food" width="360"/>
             <h2 class="project-text">Organic Food</h2>
             <p class="project-card-text">Web Site</p>
           </li>
-          <!--Дев'ятий пункт-->
+          <!--Дев'ятий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img16.jpg" alt="img16" width="360"/>
+            <img src="./images/images/img16.jpg" alt="the process of making coffee" width="360"/>
             <h2 class="project-text">Fresh Coffee</h2>
             <p class="project-card-text">Web Site</p>
           </li>
@@ -111,7 +112,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer-dark-bg">
-      <a class="logo-web" href="./index.html" class="link"
+      <a class="link" class="logo-web" href="./index.html"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
