--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <header class="header">
       <!--Навігація-->
       <nav>
-        <a class="link" href="./index.html" class="logo"
+        <a class="logo" href="./index.html" class="link"
           >WEB<span class="accent">Studio</span></a
         >
         <!--Невпорядкований список-->
         <ul class="list">
           <li>
-            <a href="./index.html" class="guidance" class="link">Studio</a>
+            <a class="guidance" class="link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="guidance" class="link"
+            <a class="guidance" class="link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
           <li>
-            <a href="" class="guidance" class="link">Contacts</a>
+            <a class="guidance" class="link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -40,12 +40,12 @@
       <address class="header-address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="email" class="link"
+            <a class="email" class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="phone" class="link"
+            <a class="phone" class="link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -138,7 +138,7 @@
     <!--FOOTER-->
     <!--Підвал сторінки-->
     <footer class="footer-dark-bg">
-      <a class="logo-web" href="./index.html" class="link"
+      <a class="link" class="logo-web" href="./index.html"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
