--- a/index.html
+++ b/index.html
@@ -18,36 +18,32 @@
     <header class="header">
       <!--Навігація-->
       <nav>
-        <a class="logo" href="./index.html" class="link"
+        <a class="logo" class="link" href="./index.html"
           >WEB<span class="accent">Studio</span></a
         >
         <!--Невпорядкований список-->
         <ul class="list">
-          <li>
-            <a class="guidance" class="link" href="./index.html">Studio</a>
+          <li class="link">
+            <a class="guidance" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a class="guidance" class="link" href="./portfolio.html"
-              >Portfolio</a
-            >
+          <li class="link">
+            <a class="guidance" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a class="guidance" class="link" href="">Contacts</a>
+          <li class="link">
+            <a class="guidance" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!--Конт. Інформація-->
       <address class="header-address">
         <ul class="list">
-          <li>
-            <a class="email" class="link" href="mailto:info@devstudio.com"
+          <li class="link">
+            <a class="email" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="phone" class="link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+          <li class="link">
+            <a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -138,7 +134,7 @@
     <!--FOOTER-->
     <!--Підвал сторінки-->
     <footer class="footer-dark-bg">
-      <a class="link" class="logo-web" href="./index.html"
+      <a class="logo-web" class="link" href="./index.html"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
