--- a/portfolio.html
+++ b/portfolio.html
@@ -20,20 +20,31 @@
           >WEB<span class="accent">Studio</span></a
         >
         <ul class="list">
-          <li class="first-item-header"><a href="./index.html" class="link">Studio</a></li>
-          <li class="first-item-header"><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li class="first-item-header"><a href="" class="link">Contacts</a></li>
+          <li class="first-item-header">
+            <a href="./index.html" class="link">Studio</a>
+          </li>
+          <li class="first-item-header">
+            <a href="./portfolio.html" class="link">Portfolio</a>
+          </li>
+          <li class="first-item-header">
+            <a href="" class="link">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="header-address">
         <ul class="list">
           <li>
-            <a class="link" class="email-portfolio" href="mailto:info@devstudio.com"
+            <a
+              class="link"
+              class="email-portfolio"
+              href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" class="phone-portfolio" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" class="phone-portfolio" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -45,65 +56,111 @@
         <h1>Portfolio</h1>
         <!--Перший список (Другий елемент)-->
         <ul class="list">
-            <li class="main-button-portfolio"><button type="button">All</button></li>
-            <li class="main-button-portfolio"><button type="button">Web Site</button></li>
-            <li class="main-button-portfolio"><button type="button">App</button></li>
-            <li class="main-button-portfolio"><button type="button">Design</button></li>
-            <li class="main-button-portfolio"><button type="button">Marketing</button></li>
+          <li class="main-button-portfolio">
+            <button type="button">All</button>
+          </li>
+          <li class="main-button-portfolio">
+            <button type="button">Web Site</button>
+          </li>
+          <li class="main-button-portfolio">
+            <button type="button">App</button>
+          </li>
+          <li class="main-button-portfolio">
+            <button type="button">Design</button>
+          </li>
+          <li class="main-button-portfolio">
+            <button type="button">Marketing</button>
+          </li>
         </ul>
         <!--Другий список (Третій елемент)-->
         <ul class="list">
-            <!--Перший пункт другого списку-->
+          <!--Перший пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img8.jpg" alt="screenshots of the banking application" width="360"/>
+            <img
+              src="./images/images/img8.jpg"
+              alt="screenshots of the banking application"
+              width="360"
+            />
             <h2 class="project-text">Banking App Interface Concept</h2>
             <p class="project-card-text">App</p>
-          </li">
+          </li>
           <!--Другий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img9.jpg" alt="Cashless Payment" width="360"/>
+            <img
+              src="./images/images/img9.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
             <h2 class="project-text">Cashless Payment</h2>
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Третій пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img10.jpg" alt="Meditation App" width="360"/>
+            <img
+              src="./images/images/img10.jpg"
+              alt="Meditation App"
+              width="360"
+            />
             <h2 class="project-text">Meditation App</h2>
             <p class="project-card-text">App</p>
           </li>
           <!--Четвертий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img11.jpg" alt="Taxi Service" width="360"/>
+            <img
+              src="./images/images/img11.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
             <h2 class="project-text">Taxi Service</h2>
             <p class="project-card-text">Marketing</p>
           </li>
           <!--П'ятий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img12.jpg" alt="Screen Illustrations" width="360"/>
+            <img
+              src="./images/images/img12.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
             <h2 class="project-text">Screen Illustrations</h2>
             <p class="project-card-text">Design</p>
           </li>
           <!--Шостий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img13.jpg" alt="Online Courses" width="360"/>
+            <img
+              src="./images/images/img13.jpg"
+              alt="Online Courses"
+              width="360"
+            />
             <h2 class="project-text">Online Courses</h2>
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Сьомий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img14.jpg" alt="Instagram Stories Concept" width="360"/>
+            <img
+              src="./images/images/img14.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+            />
             <h2 class="project-text">Instagram Stories Concept</h2>
             <p class="project-card-text">Design</p>
           </li>
           <!--Восьмий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img15.jpg" alt="Organic Food" width="360"/>
+            <img
+              src="./images/images/img15.jpg"
+              alt="Organic Food"
+              width="360"
+            />
             <h2 class="project-text">Organic Food</h2>
             <p class="project-card-text">Web Site</p>
           </li>
           <!--Дев'ятий пункт другого списку-->
           <li class="project-card" class="link">
-            <img src="./images/images/img16.jpg" alt="the process of making coffee" width="360"/>
+            <img
+              src="./images/images/img16.jpg"
+              alt="the process of making coffee"
+              width="360"
+            />
             <h2 class="project-text">Fresh Coffee</h2>
             <p class="project-card-text">Web Site</p>
           </li>
@@ -112,7 +169,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer-dark-bg">
-      <a class="link" class="logo-web" href="./index.html"
+      <a class="logo-web" class="link" href="./index.html"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
