--- a/index.html
+++ b/index.html
@@ -18,32 +18,34 @@
     <header class="header">
       <!--Навігація-->
       <nav>
-        <a class="logo" class="link" href="./index.html"
+        <a class="logo link" href="./index.html"
           >WEB<span class="accent">Studio</span></a
         >
         <!--Невпорядкований список-->
         <ul class="list">
-          <li class="link">
-            <a class="guidance" href="./index.html">Studio</a>
+          <li>
+            <a class="guidance link" href="./index.html">Studio</a>
           </li>
-          <li class="link">
-            <a class="guidance" href="./portfolio.html">Portfolio</a>
+          <li>
+            <a class="guidance link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="link">
-            <a class="guidance" href="">Contacts</a>
+          <li>
+            <a class="guidance link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!--Конт. Інформація-->
       <address class="header-address">
         <ul class="list">
-          <li class="link">
-            <a class="email" href="mailto:info@devstudio.com"
+          <li>
+            <a class="email link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="link">
-            <a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li>
+            <a class="phone link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -134,7 +136,7 @@
     <!--FOOTER-->
     <!--Підвал сторінки-->
     <footer class="footer-dark-bg">
-      <a class="logo-web" class="link" href="./index.html"
+      <a class="logo-web link" href="./index.html"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
