--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!--HEADER-->
     <header class="header">
       <nav>
-        <a class="logo" class="link" href="./index.html"
+        <a class="logo link" href="./index.html"
           >WEB<span class="accent">Studio</span></a
         >
         <ul class="list">
@@ -34,15 +34,12 @@
       <address class="header-address">
         <ul class="list">
           <li>
-            <a
-              class="link"
-              class="email-portfolio"
-              href="mailto:info@devstudio.com"
+            <a class="email-portfolio link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" class="phone-portfolio" href="tel:+110001111111"
+            <a class="phone-portfolio link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -56,26 +53,30 @@
         <h1>Portfolio</h1>
         <!--Перший список (Другий елемент)-->
         <ul class="list">
-          <li class="main-button-portfolio">
-            <button type="button">All</button>
+          <li>
+            <button type="button" class="main-button-portfolio">All</button>
           </li>
-          <li class="main-button-portfolio">
-            <button type="button">Web Site</button>
+          <li>
+            <button type="button" class="main-button-portfolio">
+              Web Site
+            </button>
           </li>
-          <li class="main-button-portfolio">
-            <button type="button">App</button>
+          <li>
+            <button type="button" class="main-button-portfolio">App</button>
           </li>
-          <li class="main-button-portfolio">
-            <button type="button">Design</button>
+          <li>
+            <button type="button" class="main-button-portfolio">Design</button>
           </li>
-          <li class="main-button-portfolio">
-            <button type="button">Marketing</button>
+          <li>
+            <button type="button" class="main-button-portfolio">
+              Marketing
+            </button>
           </li>
         </ul>
         <!--Другий список (Третій елемент)-->
         <ul class="list">
           <!--Перший пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img8.jpg"
               alt="screenshots of the banking application"
@@ -85,7 +86,7 @@
             <p class="project-card-text">App</p>
           </li>
           <!--Другий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img9.jpg"
               alt="Cashless Payment"
@@ -95,7 +96,7 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Третій пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img10.jpg"
               alt="Meditation App"
@@ -105,7 +106,7 @@
             <p class="project-card-text">App</p>
           </li>
           <!--Четвертий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img11.jpg"
               alt="Taxi Service"
@@ -115,7 +116,7 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--П'ятий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img12.jpg"
               alt="Screen Illustrations"
@@ -125,7 +126,7 @@
             <p class="project-card-text">Design</p>
           </li>
           <!--Шостий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img13.jpg"
               alt="Online Courses"
@@ -135,7 +136,7 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Сьомий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img14.jpg"
               alt="Instagram Stories Concept"
@@ -145,7 +146,7 @@
             <p class="project-card-text">Design</p>
           </li>
           <!--Восьмий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img15.jpg"
               alt="Organic Food"
@@ -155,7 +156,7 @@
             <p class="project-card-text">Web Site</p>
           </li>
           <!--Дев'ятий пункт другого списку-->
-          <li class="project-card" class="link">
+          <li class="project-card link">
             <img
               src="./images/images/img16.jpg"
               alt="the process of making coffee"
@@ -169,7 +170,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer-dark-bg">
-      <a class="logo-web" class="link" href="./index.html"
+      <a class="logo-web link" href="./index.html"
         >WEB<span class="logo-studio">Studio</span></a
       >
       <p class="footer-dark-bg-text">
