--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,9 @@
         <!--Другий список (Третій елемент)-->
         <ul class="list">
           <!--Перший пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img8.jpg"
               alt="screenshots of the banking application"
               width="360"
@@ -86,8 +87,9 @@
             <p class="project-card-text">App</p>
           </li>
           <!--Другий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img9.jpg"
               alt="Cashless Payment"
               width="360"
@@ -96,8 +98,9 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Третій пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img10.jpg"
               alt="Meditation App"
               width="360"
@@ -106,8 +109,9 @@
             <p class="project-card-text">App</p>
           </li>
           <!--Четвертий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img11.jpg"
               alt="Taxi Service"
               width="360"
@@ -116,8 +120,9 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--П'ятий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img12.jpg"
               alt="Screen Illustrations"
               width="360"
@@ -126,8 +131,9 @@
             <p class="project-card-text">Design</p>
           </li>
           <!--Шостий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img13.jpg"
               alt="Online Courses"
               width="360"
@@ -136,8 +142,9 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Сьомий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img14.jpg"
               alt="Instagram Stories Concept"
               width="360"
@@ -146,8 +153,9 @@
             <p class="project-card-text">Design</p>
           </li>
           <!--Восьмий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img15.jpg"
               alt="Organic Food"
               width="360"
@@ -156,8 +164,9 @@
             <p class="project-card-text">Web Site</p>
           </li>
           <!--Дев'ятий пункт другого списку-->
-          <li class="project-card link">
+          <li>
             <img
+              class="project-card link"
               src="./images/images/img16.jpg"
               alt="the process of making coffee"
               width="360"
