--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,16 @@
           >WEB<span class="accent">Studio</span></a
         >
         <ul class="list">
-          <li class="first-item-header">
-            <a href="./index.html" class="link">Studio</a>
+          <li>
+            <a href="./index.html" class="first-item-header link">Studio</a>
           </li>
-          <li class="first-item-header">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+          <li>
+            <a href="./portfolio.html" class="first-item-header link"
+              >Portfolio</a
+            >
           </li>
-          <li class="first-item-header">
-            <a href="" class="link">Contacts</a>
+          <li>
+            <a href="" class="first-item-header link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -76,9 +78,9 @@
         <!--Другий список (Третій елемент)-->
         <ul class="list">
           <!--Перший пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img8.jpg"
               alt="screenshots of the banking application"
               width="360"
@@ -87,9 +89,9 @@
             <p class="project-card-text">App</p>
           </li>
           <!--Другий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img9.jpg"
               alt="Cashless Payment"
               width="360"
@@ -98,9 +100,9 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Третій пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img10.jpg"
               alt="Meditation App"
               width="360"
@@ -109,9 +111,9 @@
             <p class="project-card-text">App</p>
           </li>
           <!--Четвертий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img11.jpg"
               alt="Taxi Service"
               width="360"
@@ -120,9 +122,9 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--П'ятий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img12.jpg"
               alt="Screen Illustrations"
               width="360"
@@ -131,9 +133,9 @@
             <p class="project-card-text">Design</p>
           </li>
           <!--Шостий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img13.jpg"
               alt="Online Courses"
               width="360"
@@ -142,9 +144,9 @@
             <p class="project-card-text">Marketing</p>
           </li>
           <!--Сьомий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img14.jpg"
               alt="Instagram Stories Concept"
               width="360"
@@ -153,9 +155,9 @@
             <p class="project-card-text">Design</p>
           </li>
           <!--Восьмий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img15.jpg"
               alt="Organic Food"
               width="360"
@@ -164,9 +166,9 @@
             <p class="project-card-text">Web Site</p>
           </li>
           <!--Дев'ятий пункт другого списку-->
-          <li>
+          <li class="link">
             <img
-              class="project-card link"
+              class="project-card"
               src="./images/images/img16.jpg"
               alt="the process of making coffee"
               width="360"
