--- a/portfolio.html
+++ b/portfolio.html
@@ -80,9 +80,8 @@
           <!--Перший пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img8.jpg"
-              alt="screenshots of the banking application"
+              alt="Banking App Interface Concept"
               width="360"
             />
             <h2 class="project-text">Banking App Interface Concept</h2>
@@ -91,7 +90,6 @@
           <!--Другий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img9.jpg"
               alt="Cashless Payment"
               width="360"
@@ -102,7 +100,6 @@
           <!--Третій пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img10.jpg"
               alt="Meditation App"
               width="360"
@@ -113,7 +110,6 @@
           <!--Четвертий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img11.jpg"
               alt="Taxi Service"
               width="360"
@@ -124,7 +120,6 @@
           <!--П'ятий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img12.jpg"
               alt="Screen Illustrations"
               width="360"
@@ -135,7 +130,6 @@
           <!--Шостий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img13.jpg"
               alt="Online Courses"
               width="360"
@@ -146,7 +140,6 @@
           <!--Сьомий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img14.jpg"
               alt="Instagram Stories Concept"
               width="360"
@@ -157,7 +150,6 @@
           <!--Восьмий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img15.jpg"
               alt="Organic Food"
               width="360"
@@ -168,7 +160,6 @@
           <!--Дев'ятий пункт другого списку-->
           <li class="link">
             <img
-              class="project-card"
               src="./images/images/img16.jpg"
               alt="the process of making coffee"
               width="360"
