--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,8 @@
         <!--Другий список (Третій елемент)-->
         <ul class="list">
           <!--Перший пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img8.jpg"
                 alt="Banking App Interface Concept"
@@ -90,8 +90,8 @@
             </a>
           </li>
           <!--Другий пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img9.jpg"
                 alt="Cashless Payment"
@@ -102,8 +102,8 @@
             </a>
           </li>
           <!--Третій пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img10.jpg"
                 alt="Meditation App"
@@ -114,8 +114,8 @@
             </a>
           </li>
           <!--Четвертий пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img11.jpg"
                 alt="Taxi Service"
@@ -126,8 +126,8 @@
             </a>
           </li>
           <!--П'ятий пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img12.jpg"
                 alt="Screen Illustrations"
@@ -138,8 +138,8 @@
             </a>
           </li>
           <!--Шостий пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img13.jpg"
                 alt="Online Courses"
@@ -150,8 +150,8 @@
             </a>
           </li>
           <!--Сьомий пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img14.jpg"
                 alt="Instagram Stories Concept"
@@ -162,16 +162,20 @@
             </a>
           </li>
           <!--Восьмий пункт другого списку-->
-          <li class="link">
-            <a href="">
-              <img src="./images/images/img15.jpg" alt="" width="360" />
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/images/img15.jpg"
+                alt="Organic Food"
+                width="360"
+              />
               <h2 class="project-text">Organic Food</h2>
               <p class="project-card-text">Web Site</p>
             </a>
           </li>
           <!--Дев'ятий пункт другого списку-->
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/images/img16.jpg"
                 alt="the process of making coffee"
